@@ -38,7 +38,7 @@ This xxm Library can be loaded by one of the xxm handlers:</p>
 <li>an Apache 2 module</li>
 <li>a process that uses HTTPAPI</li>
 <li>a stand-alone basic HTTP server</li>
-<li>an old-fashioned CGI application</li>
+<li>an old-fashioned CGI or SCGI application</li>
 <li>... (perhaps more later)</li>
 </ul>
 
