@@ -32,8 +32,7 @@ begin
   FContextIndex:=0;
   FContextSize:=0;
   InitializeCriticalSection(FLock);
-  FQueueEvent:=CreateEventA(nil,true,false,
-    PAnsiChar('xxmHttp:KeepConnection:'+IntToHex(ThreadID,8)));
+  FQueueEvent:=CreateEvent(nil,true,false,nil);
 end;
 
 destructor TXxmKeptConnections.Destroy;
